compiler/toc_hir_lowering/tests/snapshots/lowering__lower_put_stmt-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "put 1 : 1 :  : 1"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..16): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..16): []
        Put@(FileId(1), 0..16): newline
          Literal@(FileId(1), 4..5): Integer(1)
          Literal@(FileId(1), 8..9): Integer(1)
          Literal@(FileId(1), 15..16): Integer(1)
error in file FileId(1) at 13..14: unexpected token
| error in file FileId(1) for 13..14: expected expression, but found ‘:’

