compiler/toc_hir_lowering/tests/snapshots/lowering__lower_put_stmt-6.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "put 1 :  :  : "

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..14): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..13): []
        Put@(FileId(1), 0..13): newline
          Literal@(FileId(1), 4..5): Integer(1)
error in file FileId(1) at 9..10: expected expression, but found ‘:’
error in file FileId(1) at 12..13: expected expression, but found ‘:’

