compiler/toc_hir_lowering/tests/snapshots/lowering__lower_range_expr-3.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "proc call end call var _ := call(1..*)"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..38): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..38): []
        StmtItem@(FileId(1), 0..18): ItemId(0)
          Subprogram@(FileId(1), 0..18): "call"@(FileId(1), 5..9)
            Void@(FileId(1), 0..9)
            StmtBody@(FileId(1), 10..10): []
        StmtItem@(FileId(1), 19..38): ItemId(1)
          ConstVar@(FileId(1), 19..38): var "_"@(FileId(1), 23..24)
            ExprBody@(FileId(1), 28..38)
              CallExpr@(FileId(1), 28..38): [...]
                Name@(FileId(1), 28..32): "call"@(FileId(1), 5..9)
                Range@(FileId(1), 33..37): FromStart(ExprId(1)) .. AtEnd(SpanId(10))
                  Literal@(FileId(1), 33..34): Integer(1)

