compiler/toc_hir_lowering/tests/snapshots/lowering__lower_range_expr-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "proc call end call var _ := call(1..*-1)"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..40): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..40): []
        StmtItem@(FileId(1), 0..18): ItemId(0)
          Subprogram@(FileId(1), 0..18): "call"@(FileId(1), 5..9)
            Void@(FileId(1), 0..9)
            StmtBody@(FileId(1), 10..10): []
        StmtItem@(FileId(1), 19..40): ItemId(1)
          ConstVar@(FileId(1), 19..40): var "_"@(FileId(1), 23..24)
            ExprBody@(FileId(1), 28..40)
              CallExpr@(FileId(1), 28..40): [...]
                Name@(FileId(1), 28..32): "call"@(FileId(1), 5..9)
                Range@(FileId(1), 33..39): FromStart(ExprId(1)) .. FromEnd(ExprId(2))
                  Literal@(FileId(1), 33..34): Integer(1)
                  Literal@(FileId(1), 38..39): Integer(1)

