compiler/toc_hir_lowering/tests/snapshots/lowering__lower_range_expr-7.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "var _ := *..*"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..13): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..13): []
        StmtItem@(FileId(1), 0..10): ItemId(0)
          ConstVar@(FileId(1), 0..10): var "_"@(FileId(1), 4..5)
error in file FileId(1) at 9..10: unexpected token
| error in file FileId(1) for 9..10: expected expression, but found `*`
error in file FileId(1) at 10..12: unexpected token
| error in file FileId(1) for 10..12: expected statement, but found `..`
error in file FileId(1) at 12..13: unexpected token
| error in file FileId(1) for 12..13: expected statement, but found `*`

