compiler/toc_hir_lowering/tests/snapshots/lowering__lower_range_expr.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "proc call end call var _ := call(*)"
---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..35): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..35): []
        StmtItem@(FileId(1), 0..18): ItemId(0)
          Subprogram@(FileId(1), 0..18): "call"@(FileId(1), 5..9)
            Void@(FileId(1), 0..9)
            StmtBody@(FileId(1), 10..10): []
        StmtItem@(FileId(1), 19..35): ItemId(1)
          ConstVar@(FileId(1), 19..35): var "_"@(FileId(1), 23..24)
            ExprBody@(FileId(1), 28..35)
              CallExpr@(FileId(1), 28..35): [...]
                Name@(FileId(1), 28..32): "call"@(FileId(1), 5..9)
                Range@(FileId(1), 33..34): AtEnd(SpanId(10))

